updates for lesson 6
