# swaggerDesign.json
@@ -1,391 +1,189 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "description": "This is an api server for a portfolio builder website.\n",
-      "version": "1.0.0",
-      "title": "Portfolio Builder",
-      "contact": {
-        "email": "jorge.ovalle@gmail.com"
-      },
-      "license": {
-        "name": "Apache 2.0",
-        "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-      }
-    },
-    "host": "https://cit341ovalle.herokuapp.com/",
-    "basePath": "/",
-    "tags": [
-      {
-        "name": "theme",
-        "description": "Operations about themes"
-      },
-      {
-        "name": "user",
-        "description": "Operations about user"
-      },
-      {
-        "name": "Not Yet Implemented",
-        "description": "These API endpoints are designed and will be created in the near future"
-      }
-    ],
-    "schemes": ["https"],
-    "paths": {
-      "/course/{courseName}": {
-        "get": {
-          "tags": ["course"],
-          "summary": "Finds Course by name",
-          "description": "Each Course has a unique name, this will basically find a single theme by an exact name almost like an id",
-          "operationId": "findCourseByName",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "name": "courseName",
-              "in": "path",
-              "description": "Course name string is required and functions as id",
-              "required": true,
-              "type": "string",
-              "items": {
-                "type": "string",
-                "default": "available"
-              },
-              "collectionFormat": "csv"
-            }
-          ],
-          "security": [
-            {
-              "petstore_auth": ["write:pets", "read:pets"]
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "successful operation",
-              "schema": {
-                "type": "object"
-              }
-            },
-            "400": {
-              "description": "Invalid Course name value"
-            }
+  "swagger": "2.0",
+  "info": {
+    "description": "courses API to see and get courses and APIKey: 8da06675-30c0-461b-aada-5ed8d6bae95b",
+    "version": "1.0.0",
+    "title": "Courses API"
+  },
+  "host": "virtserver.swaggerhub.com",
+  "basePath": "/jorge-blator/testAPIjorge/1.0.0",
+  "schemes": [
+    "https"
+  ],
+  "paths": {
+    "/courses/": {
+      "get": {
+        "description": "views all courses",
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "header",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
-      "/user": {
-        "post": {
-          "tags": ["user"],
-          "summary": "Create user",
-          "description": "This is for when a user creates an account.",
-          "operationId": "createUser",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "Created user object",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/Credentials"
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "successfully created user",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "id": {
-                    "type": "integer",
-                    "format": "int64"
-                  },
-                  "name": {
-                    "type": "string",
-                    "example": "Math Course"
-                  }
-                }
-              }
-            },
-            "400": {
-              "description": "Invalid Course name value"
+      "post": {
+        "description": "creates a new course",
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "header",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/body"
             }
           }
-        }
-      },
-      "/user/login": {
-        "get": {
-          "tags": ["Not Yet Implemented"],
-          "summary": "Logs user into the system",
-          "operationId": "loginUser",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "name": "username",
-              "in": "query",
-              "description": "The user name for login",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "name": "password",
-              "in": "query",
-              "description": "The password for login in clear text",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "successful operation",
-              "headers": {
-                "X-Rate-Limit": {
-                  "type": "integer",
-                  "format": "int32",
-                  "description": "calls per hour allowed by the user"
-                },
-                "X-Expires-After": {
-                  "type": "string",
-                  "format": "date-time",
-                  "description": "date in UTC when token expires"
-                }
-              },
-              "schema": {
-                "type": "string"
-              }
-            },
-            "400": {
-              "description": "Invalid username/password supplied"
-            }
-          }
-        }
-      },
-      "/user/logout": {
-        "get": {
-          "tags": ["Not Yet Implemented"],
-          "summary": "Logs out current logged in user session",
-          "operationId": "logoutUser",
-          "produces": ["application/json"],
-          "parameters": [],
-          "responses": {
-            "default": {
-              "description": "successful operation"
-            }
-          }
-        }
-      },
-      "/user/{username}": {
-        "get": {
-          "tags": ["user"],
-          "summary": "Get user by user name",
-          "operationId": "getUserByName",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "name": "username",
-              "in": "path",
-              "description": "The name that needs to be fetched.",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "successful operation",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            },
-            "400": {
-              "description": "Invalid username supplied"
-            },
-            "404": {
-              "description": "User not found"
-            }
-          }
-        },
-        "put": {
-          "tags": ["Not Yet Implemented"],
-          "summary": "Updated user",
-          "description": "This can only be done by the logged in user.",
-          "operationId": "updateUser",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "name": "username",
-              "in": "path",
-              "description": "name that need to be updated",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "in": "body",
-              "name": "body",
-              "description": "Updated user object",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          ],
-          "responses": {
-            "204": {
-              "description": "Successfully modified user"
-            },
-            "400": {
-              "description": "Invalid user supplied"
-            },
-            "404": {
-              "description": "User not found"
-            }
-          }
-        },
-        "delete": {
-          "tags": ["Not Yet Implemented"],
-          "summary": "Delete user",
-          "description": "This can only be done by the logged in user.",
-          "operationId": "deleteUser",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "name": "username",
-              "in": "path",
-              "description": "The name that needs to be deleted",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "204": {
-              "description": "Successfully deleted user"
-            },
-            "400": {
-              "description": "Invalid username supplied"
-            },
-            "404": {
-              "description": "User not found"
-            }
-          }
-        }
-      },
-      "/user/getAllUsers": {
-        "get": {
-          "tags": ["user"],
-          "summary": "Get all users",
-          "operationId": "getAllUsers",
-          "produces": ["application/json"],
-          "responses": {
-            "200": {
-              "description": "successful operation",
-              "schema": {
-                "type": "Array",
-                "$ref": "#/definitions/User"
-              }
-            },
-            "500": {
-              "description": "Error occurred"
-            }
-          }
-        },
-        "post": {
-          "tags": ["user"],
-          "summary": "Create user",
-          "description": "This is for when a user creates an account",
-          "operationId": "createUser",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "Created user object",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/Credentials"
-              }
-            }
-          ],
-          "responses": {
-            "default": {
-              "description": "A User object",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "securityDefinitions": {
-      "petstore_auth": {
-        "type": "oauth2",
-        "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
-        "flow": "implicit",
-        "scopes": {
-          "write:pets": "modify pets in your account",
-          "read:pets": "read your pets"
-        }
-      }
-    },
-    "definitions": {
-      "User": {
-        "type": "object",
-        "required": ["password", "username"],
-        "properties": {
-          "_id": {
-            "type": "integer",
-            "format": "string"
-          },
-          "username": {
+    "/courses/{id}": {
+      "put": {
+        "description": "update a course",
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "header",
+            "required": false,
             "type": "string"
           },
-          "password": {
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
             "type": "string"
           },
-          "displayName": {
-            "type": "string"
+          {
+            "in": "body",
+            "name": "body",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/body_1"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
-          "info": {
-            "$ref": "#/definitions/User_info"
+          "400": {
+            "description": "Bad Request"
           },
-          "profile": {
-            "$ref": "#/definitions/User_profile"
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
-      "course": {
-        "type": "INSERT MOONGOSE STUFF HERE"
-      },
-      "Credentials": {
-        "type": "object",
-        "required": ["password", "username"],
-        "properties": {
-          "username": {
+      "delete": {
+        "description": "delete a course",
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "header",
+            "required": false,
             "type": "string"
           },
-          "password": {
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
             "type": "string"
           }
-        }
-      },
-      "User_info": {
-        "type": "object",
-        "properties": {
-          "email": {
-            "type": "string"
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
           },
-          "phoneNumber": {
-            "type": "string"
-          },
-          "currentLocation": {
-            "type": "string"
-          },
-          "openToNewOpportunities": {
-            "type": "boolean"
-          },
-          "profileIsPublic": {
-            "type": "boolean"
-          },
-          "theme_name": {
-            "type": "string"
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     }
+  },
+  "definitions": {
+    "body_1": {
+      "type": "object",
+      "properties": {
+        "promotion_id": {
+          "example": "any"
+        },
+        "promo_percentage": {
+          "example": "any"
+        },
+        "promo_name": {
+          "example": "any"
+        },
+        "promo_description": {
+          "example": "any"
+        },
+        "promo_url": {
+          "example": "any"
+        },
+        "promo_start": {
+          "example": "any"
+        },
+        "promo_end": {
+          "example": "any"
+        },
+        "promo_owner": {
+          "example": "any"
+        }
+      }
+    },
+    "body": {
+      "type": "object",
+      "properties": {
+        "promotion_id": {
+          "example": "any"
+        },
+        "promo_percentage": {
+          "example": "any"
+        },
+        "promo_name": {
+          "example": "any"
+        },
+        "promo_description": {
+          "example": "any"
+        },
+        "promo_url": {
+          "example": "any"
+        },
+        "promo_start": {
+          "example": "any"
+        },
+        "promo_end": {
+          "example": "any"
+        },
+        "promo_owner": {
+          "example": "any"
+        }
+      }
+    }
   }
+}
